[gd_scene load_steps=17 format=3 uid="uid://bewwldnwj4pbg"]

[ext_resource type="Script" path="res://scripts/character/player/player_human.gd" id="1_k8kkq"]
[ext_resource type="Texture2D" uid="uid://bqgtun3vps2up" path="res://adon/0x72_DungeonTilesetII_v1.7/frames/wizzard_f_idle_anim_f0.png" id="2_bgjsn"]
[ext_resource type="Texture2D" uid="uid://cphwrktkinq8m" path="res://adon/0x72_DungeonTilesetII_v1.7/frames/wizzard_f_idle_anim_f1.png" id="3_8cuov"]
[ext_resource type="Texture2D" uid="uid://cdehr6fxl2xaf" path="res://adon/0x72_DungeonTilesetII_v1.7/frames/wizzard_f_idle_anim_f2.png" id="4_3v2hb"]
[ext_resource type="Texture2D" uid="uid://b40l1hxqp0qqb" path="res://adon/0x72_DungeonTilesetII_v1.7/frames/wizzard_f_idle_anim_f3.png" id="5_aj5ll"]
[ext_resource type="Script" path="res://scripts/health.gd" id="6_d7ndt"]
[ext_resource type="Theme" uid="uid://dkw77ihbnun07" path="res://health_bar_theme.tres" id="7_ldg8j"]
[ext_resource type="Script" path="res://scripts/input_manager.gd" id="8_hvmke"]
[ext_resource type="Theme" uid="uid://bipjgp54b8cyn" path="res://scenes/buttons_theme.tres" id="9_4onto"]
[ext_resource type="FontFile" uid="uid://wq6bhg757pv0" path="res://adon/fonts/Xolonium-Regular.ttf" id="10_skcpc"]
[ext_resource type="PackedScene" uid="uid://b4d6lgk4hf6x4" path="res://scenes/spell_manager.tscn" id="11_46un0"]
[ext_resource type="Script" path="res://scripts/input_processor.gd" id="12_t6cnj"]
[ext_resource type="PackedScene" uid="uid://es2g4x8qgqpd" path="res://scenes/ui/spell_ui.tscn" id="13_gxqwt"]
[ext_resource type="Script" path="res://scripts/target.gd" id="14_pgc0k"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x3lr4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bgjsn")
}, {
"duration": 1.0,
"texture": ExtResource("3_8cuov")
}, {
"duration": 1.0,
"texture": ExtResource("4_3v2hb")
}, {
"duration": 1.0,
"texture": ExtResource("5_aj5ll")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ruy4m"]
size = Vector2(56, 67)

[node name="Player_human" type="Area2D"]
script = ExtResource("1_k8kkq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_x3lr4")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 12.5)
shape = SubResource("RectangleShape2D_ruy4m")

[node name="Health" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("6_d7ndt")

[node name="HealthText" type="Label" parent="Health"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
text = "0/0"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="Health"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -49.0
offset_top = 10.0
offset_right = 49.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("7_ldg8j")
max_value = 14.0
step = 1.0
value = 13.0
show_percentage = false

[node name="InputManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_hvmke")

[node name="LeftHand" type="OptionButton" parent="InputManager"]
layout_mode = 0
offset_left = -80.0
offset_top = -64.0
offset_right = -11.0
offset_bottom = -33.0
theme = ExtResource("9_4onto")
theme_override_fonts/font = ExtResource("10_skcpc")
keep_pressed_outside = true
selected = 1
item_count = 7
popup/item_0/text = "f"
popup/item_1/text = "p"
popup/item_1/id = 1
popup/item_2/text = "s"
popup/item_2/id = 2
popup/item_3/text = "w"
popup/item_3/id = 3
popup/item_4/text = "d"
popup/item_4/id = 4
popup/item_5/text = "c"
popup/item_5/id = 5
popup/item_6/text = "stab"
popup/item_6/id = 6

[node name="RightHand" type="OptionButton" parent="InputManager"]
layout_mode = 0
offset_left = 16.0
offset_top = -64.0
offset_right = 85.0
offset_bottom = -36.0
theme = ExtResource("9_4onto")
theme_override_fonts/font = ExtResource("10_skcpc")
selected = 1
item_count = 7
popup/item_0/text = "f"
popup/item_1/text = "p"
popup/item_1/id = 1
popup/item_2/text = "s"
popup/item_2/id = 2
popup/item_3/text = "w"
popup/item_3/id = 3
popup/item_4/text = "d"
popup/item_4/id = 4
popup/item_5/text = "c"
popup/item_5/id = 5
popup/item_6/text = "stab"
popup/item_6/id = 6

[node name="EndTurnButton" type="Button" parent="InputManager"]
layout_mode = 1
anchors_preset = -1
offset_left = -48.0
offset_top = 80.0
offset_right = 57.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("9_4onto")
theme_override_fonts/font = ExtResource("10_skcpc")
theme_override_font_sizes/font_size = 20
text = "End Turn"

[node name="SpellManager" parent="." instance=ExtResource("11_46un0")]

[node name="InputProcessor" type="Node2D" parent="SpellManager"]
script = ExtResource("12_t6cnj")

[node name="SpellSelector" type="Node2D" parent="SpellManager"]

[node name="SpellUI" parent="SpellManager" instance=ExtResource("13_gxqwt")]
theme = ExtResource("9_4onto")

[node name="Target" type="Panel" parent="."]
clip_children = 1
offset_left = -37.0
offset_top = -28.0
offset_right = 35.0
offset_bottom = 47.0
script = ExtResource("14_pgc0k")

[node name="InputHistory" type="Label" parent="."]
offset_left = -80.0
offset_top = -171.0
offset_right = -79.0
offset_bottom = -145.0
horizontal_alignment = 3
justification_flags = 131
max_lines_visible = 5

[node name="InputHistory" type="Label" parent="InputHistory"]
layout_mode = 0
offset_left = -80.0
offset_top = -171.0
offset_right = -79.0
offset_bottom = -145.0
horizontal_alignment = 3
justification_flags = 131
max_lines_visible = 5

[connection signal="end_turn" from="InputManager" to="." method="turn_end"]
[connection signal="pressed" from="InputManager/EndTurnButton" to="InputManager" method="_on_end_turn_button_pressed"]
[connection signal="gui_input" from="Target" to="." method="_area_selected"]
[connection signal="mouse_entered" from="Target" to="." method="_area_entered"]
[connection signal="mouse_exited" from="Target" to="." method="_area_exited"]
